--- a/src/app/editar-producto/editar-producto.component.html
+++ b/src/app/editar-producto/editar-producto.component.html
@@ -127,6 +127,11 @@
           <input class="form-control" id="subproducto"  placeholder="1 o 0"
             name="subproducto" #subproducto required [(ngModel)]="productoNew.sub_producto">
         </div>
+        <div class="form-group col-md-3 col-sm-6">
+          Granel
+          <input class="form-control" id="granel"  placeholder="1 o 0"
+            name="granel" #granel required [(ngModel)]="productoNew.granel">
+        </div>
       </div>
     
   
