--- a/src/app/cartera-clientes/cartera-clientes.component.html
+++ b/src/app/cartera-clientes/cartera-clientes.component.html
@@ -25,7 +25,12 @@
   <div class="form-row">
     <div class="form-group col-md-6">
       <button type="button" class="btn btn-primary mr-2" (click)="buscar(clientePV,fechaIni,fechaFin)">Buscar</button>
+      <button type="button" class="btn btn-primary ml-2"
+      (click)="exportTableToExcel()"><i class="far fa-file-excel"></i> Exportar xls </button>
+      <button type="button" class="btn btn-primary ml-2"
+      (click)="exportTableToExcel()"><i class="far fa-file-pdf"></i> Exportar pdf</button>
     </div>
+ 
   </div>
 
   <table class="table table-hover">
@@ -33,6 +38,7 @@
       <tr>
         <th scope="col">Opciones</th>
         <th scope="col">Fecha Registro</th>
+        <th scope="col">Cliente</th>
         <th scope="col">N° interno</th>
         <th scope="col">Consecutivo DIAN</th>
         <th scope="col">Valor Factura</th>
@@ -59,6 +65,7 @@
           </button>
         </th>
         <td>{{ordenes.fecha_registro| date: 'dd/MM/yyyy'}}</td>
+        <td>{{nombreClienteFun(ordenes.cliente_id)}}</td>
         <td>{{ordenes.documento_id}}</td>
         <td>{{ordenes.consecutivo_dian}}</td>
         <td>{{formatearNumber(ordenes.total)}}</td>
@@ -165,6 +172,9 @@
     </div>
   </div>
 </div>
+<div class="col col-ms-1">
+  <a href="#" name="downloadZipLink" #downloadZipLink id="downloadZipLink" download>
 
+  </a></div>
 
 </div>
