--- a/src/app/reporte-productos/reporte-productos.component.html
+++ b/src/app/reporte-productos/reporte-productos.component.html
@@ -66,8 +66,7 @@
   <div class="col col-ms-1">
     <a href="#" name="downloadZipLink" #downloadZipLink id="downloadZipLink" download>
 
-    </a>
-</div>
+    </a></div>
 
 
   <!-- Modal imprimir-->
